--- a/package.json
+++ b/package.json
@@ -6,19 +6,33 @@
     "dev": "next dev",
     "build": "next build",
     "start": "next start",
-    "lint": "next lint"
+    "lint": "next lint",
+    "test": "jest",
+    "test:watch": "jest --watch"
   },
   "dependencies": {
+    "@chakra-ui/react": "^1.8.6",
+    "@emotion/react": "^11.8.2",
+    "@emotion/styled": "^11.8.1",
     "babel-plugin-styled-components": "^2.0.2",
+    "framer-motion": "^6.2.8",
     "next": "11.0.0",
     "react": "17.0.2",
-    "react-dom": "17.0.2"
+    "react-dom": "17.0.2",
+    "reset-css": "^5.0.1"
   },
   "devDependencies": {
+    "@testing-library/dom": "^8.11.4",
+    "@testing-library/jest-dom": "^5.16.3",
+    "@testing-library/react": "^12.1.4",
+    "@testing-library/user-event": "^13.5.0",
+    "@types/jest": "^27.4.1",
     "@types/node": "^15.12.4",
     "@types/react": "^17.0.11",
+    "babel-jest": "^27.5.1",
     "eslint": "7.29.0",
     "eslint-config-next": "11.0.0",
+    "jest": "^27.5.1",
     "typescript": "^4.3.4"
   }
 }
